<resources>
    <string name="app_name">GDSCHackertonProjects</string>
    <string name="RegistrationTitle">회원가입</string>
    <string name="YourVeganStep">현재 비건 단계</string>
    <string name="Meatarian">육식파</string>
    <string name="Flexitarian">플렉시테리언</string>
    <string name="PolloVegetarian">폴로 베지테리언</string>
    <string name="PescoVegetarian">페스코 베지테리언</string>
    <string name="LactoOveVegetarian">락토 오보 베지테리언</string>
    <string name="OvoVegetarian">오보 베지테리언</string>
    <string name="LactoVegetarian">락토 베지테리언</string>
    <string name="Vegan">비건</string>
    <string name="Next">다음</string>
    <string name="TargetVeganStep">목표 수준</string>
    <string name="ReduceMeats">먹는 고기 양을 줄인다</string>
    <string name="Previous">이전</string>
    <string name="TargetDay">목표 요일</string>
    <string name="Monday">월</string>
    <string name="Tuesday">화</string>
    <string name="Wednesday">수</string>
    <string name="Thursday">목</string>
    <string name="Friday">금</string>
    <string name="Saturday">토</string>
    <string name="Sunday">일</string>
    <string name="TimeForEating">식사 시간</string>
    <string name="title_activity_bottom_navigator">BottomNavigator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="MyGoals">나의 목표</string>
    <string name="TargetVegan">목표 단계 :</string>
    <string name="dayForEarth">계획 요일 :</string>
    <string name="CollectedAwardButton">수집한 뱃지</string>
    <string name="NewPost">+ 글쓰기</string>
    <string name="PictureThatIAte">pictureThatIAte</string>
    <string name="PostedPostEX">여기에 업로드한 글이 적힌다\n\n오늘은 어떤 맛있는 것을 먹었다 \n 고구마 캐릭터를 사진 예시를 위해 넣었다.</string>
    <string name="Collected">수집한 뱃지</string>
    <string name="BackToMain">메인으로</string>
    <string name="Toma">toma</string>
    <string name="IntroductionToma">이름: 토마토\n소개: \n여름의 뜨거움을 가지고 있는\n토마토\n빨갛고 통통한게 아주\n잘 익었다.\n보기만해도 건강해지는 느낌</string>
    <string name="sweet">Sweet</string>
    <string name="IntroductionSweet">이름: 구마구마\n소개: \n한겨울을 따뜻하게 해줄 고구마\n노랗고 윤기가 흐르는 것이\n잘 익었다.\n보기만해도 따뜻달달하다</string>
    <string name="Cabbage">Cabbage</string>
    <string name="IntroductionCabbage">이름: 뱃추\n소개: \n국에 넣으면 시원하고\n쌈을 싸먹어도 맛있는 배추\n보기만해도 시원~하다</string>
    <string name="beet">Beet</string>
    <string name="IntroductionBeet">이름: 비트\n소개: \n하트모양 깜찍한 비트\n누가 뭐라고 해도 슈퍼푸드다\n색도 좋고 아주 맛있다\n건강해지는 소리가 들린다</string>
    <string name="bro">Bro</string>
    <string name="IntroductionBro">이름: 브로\n소개: \n나무같이 생겼지만 사실은 꽃\n파마머리를 한 브로콜리다.\n살짝 데쳐서 초고추장과 함께\n먹으면 정말 맛있다</string>
    <string name="Morning">아침</string>
    <string name="_7_00">7:00</string>
    <string name="lunch">점심</string>
    <string name="_12_00">12:00</string>
    <string name="dinner">저녁</string>
    <string name="_19_00">19:00</string>
    <string name="touch_for_start">Touch for Start</string>
    <string name="touch">Touch</string>
    <string name="defaultSunday">일요일</string>
</resources>