<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Registration3">

    <TextView
        android:id="@+id/registNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/RegistrationTitle"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/targetDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/TargetDay"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registNewUser" />

    <RadioGroup
        android:id="@+id/targetDayButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/sunday"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/targetDay">

        <RadioButton
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Monday"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tuesday"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wednesday"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Thursday"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Friday"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Saturday"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sunday"
            android:textSize="20sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/timeForEating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/TimeForEating"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/targetDayButtons" />

    <CheckBox
        android:id="@+id/breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:padding="10dp"
        android:text="@string/Morning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeForEating" />

    <EditText
        android:id="@+id/editBreakfast"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/_7_00"
        android:inputType="time"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/breakfast"
        app:layout_constraintTop_toBottomOf="@id/timeForEating" />

    <CheckBox
        android:id="@+id/lunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:padding="10dp"
        android:text="@string/lunch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/breakfast" />

    <EditText
        android:id="@+id/editLunch"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/_12_00"
        android:inputType="time"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/lunch"
        app:layout_constraintTop_toBottomOf="@id/breakfast" />

    <CheckBox
        android:id="@+id/dinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:padding="10dp"
        android:text="@string/dinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lunch" />

    <EditText
        android:id="@+id/editDinner"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/_19_00"
        android:inputType="time"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/dinner"
        app:layout_constraintTop_toBottomOf="@id/lunch" />

    <Button
        android:id="@+id/previousStep3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dinner" />

    <Button
        android:id="@+id/nextStep3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dinner" />

</androidx.constraintlayout.widget.ConstraintLayout>