<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Registration2">

    <TextView
        android:id="@+id/registNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/RegistrationTitle"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/targetVeganStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/TargetVeganStep"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registNewUser" />

    <RadioGroup
        android:id="@+id/targetVeganStepButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/flexitarian"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/targetVeganStep">

        <RadioButton
            android:id="@+id/reduceMeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ReduceMeats" />

        <RadioButton
            android:id="@+id/flexitarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Flexitarian" />

        <RadioButton
            android:id="@+id/polloVegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PolloVegetarian" />

        <RadioButton
            android:id="@+id/pescoVegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PescoVegetarian" />

        <RadioButton
            android:id="@+id/lactoOvoVegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LactoOveVegetarian" />

        <RadioButton
            android:id="@+id/ovoVegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OvoVegetarian" />

        <RadioButton
            android:id="@+id/lactoVegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LactoVegetarian" />

        <RadioButton
            android:id="@+id/vegan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Vegan" />

    </RadioGroup>

    <Button
        android:id="@+id/previousStep3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/targetVeganStepButton" />

    <Button
        android:id="@+id/nextStep3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/targetVeganStepButton" />

</androidx.constraintlayout.widget.ConstraintLayout>