<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Registration">

    <TextView
        android:id="@+id/registNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/RegistrationTitle"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/veganStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/YourVeganStep"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registNewUser" />

    <RadioGroup
        android:id="@+id/veganStepButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/none"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/veganStep">

        <RadioButton
            android:id="@+id/none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Meatarian" />

        <RadioButton
            android:id="@+id/flexitarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Flexitarian" />

        <RadioButton
            android:id="@+id/polloVegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PolloVegetarian" />

        <RadioButton
            android:id="@+id/pescoVegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PescoVegetarian" />

        <RadioButton
            android:id="@+id/lactoOvoVegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LactoOveVegetarian" />

        <RadioButton
            android:id="@+id/ovoVegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OvoVegetarian" />

        <RadioButton
            android:id="@+id/lactoVegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LactoVegetarian" />

        <RadioButton
            android:id="@+id/vegan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Vegan" />

    </RadioGroup>

    <Button
        android:id="@+id/nextStep3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/veganStepButton" />


</androidx.constraintlayout.widget.ConstraintLayout>